passage sur le terminal integre a vscode pouyr compatibilite avec linux

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "name": "Launch Program",
             "program": "${workspaceFolder}/src/server.js",
-            "console" : "externalTerminal"
+            "console" : "integratedTerminal"
         }
     ]
 }
