--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
     "express": "^4.18.2",
     "serve-static": "^1.14.1",
     "winston": "^2.4.4",
-    "wpi-gpio": "git://github.com/fredS86/wpi-gpio.git#simulator"
+    "pigpio-client": "1.5.2"
   }
 }
