--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jimp": "^0.16.2",
     "pigpio-client": "1.5.2",
     "serve-static": "^1.14.1",
+    "sharp": "^0.23.4",
     "winston": "^2.4.4"
   }
 }
