ce serait bien de pouvoir regler le contraste et la luminosite de l'image

--- a/src/conf/server.json.example
+++ b/src/conf/server.json.example
@@ -85,7 +85,9 @@
 					"background": "#FFFFFF|rgb(255 255 255)|... if fit is contain (see https://www.npmjs.com/package/color-string)"
 				},
 				"verticalFlip": false,
-				"horizontalFlip": true
+				"horizontalFlip": true,
+				"brightness": 50,
+				"contrast": 50
 			}
 		}
 	]
